<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.markerlist.MarkerListFragment">

    <LinearLayout
        android:id="@+id/linearMarks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/marker_list_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcmarkers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/mark_item" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/bottomInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/buttonCloseBottomInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_margin="10dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/close"
            android:src="@drawable/baseline_close_24" />

        <LinearLayout
            android:id="@+id/addMarkBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/addMarkTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/edit_marker"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/newMarkCoords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:textColor="@color/grey"
                tools:text="Координаты: 34.542155 52.45542254" />

            <EditText
                android:id="@+id/newMarkerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:ems="10"
                android:hint="@string/type_description"
                android:inputType="text" />

            <ImageButton
                android:id="@+id/buttonAddMarker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_marker"
                android:src="@drawable/ic_mark_add" />
        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>